# life-maintenance

./: .gitignore  Cargo.toml  README.md
data/: vendors.yaml
docs/plans/: 2026-06-06-life-maintenance-cli-phase1.md  2026-06-06-life-maintenance-cli-rust.md  2026-06-08-lm-show-task-detail.md
docs/specs/: 2026-06-06-life-maintenance-tracker-design.md  2026-06-08-lm-show-task-detail-design.md
docs/superpowers/specs/: 2026-06-06-life-maintenance-tracker-design.md
examples/: tasks.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  schedule.rs  schema.rs  service.rs  status.rs  store.rs
tests/: cli.rs
