[package]
name = "lifemaint"
version = "0.1.0"
edition = "2021"
description = "Track and complete recurring home/life maintenance tasks."

[[bin]]
name = "lm"
path = "src/main.rs"

[lib]
name = "lifemaint"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
jiff = { version = "0.2.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
